[metadata]
name = openstack-user-tools
author = Jerome Pansanel 
author-email = j.pansanel@pansanel.net
summary = A set of tools for OpenStack
description-file =
    README.md
home-page = https://github.com/Pansanel/openstack-user-tools
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    os_user_tools

[entry_points]
console_scripts =
    os-user-info = os_user_tools.user_info:main
